package persistence;

public interface AbstractProductContacts {
    void save() ;
    void load();
}
