package persistence;

public interface AbstractProductConversation {
    void save() ;
    void load();
}
